k8s/contact-support.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-support
spec:
  replicas: 1
  selector:
    matchLabels:
      component: contact-support
  template:
    metadata:
      labels:
        component: contact-support
    spec:
      containers:
        - name: contact-support
          image: man7ober/contact-support:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: contact-support-service
spec:
  type: ClusterIP
  selector:
    component: contact-support
  ports:
    - name: contact-support
      protocol: TCP
      port: 8000
      targetPort: 8000
