k8s/ecommerce-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      component: ecommerce-ui
  template:
    metadata:
      labels:
        component: ecommerce-ui
    spec:
      containers:
        - name: ecommerce-ui
          image: man7ober/ecommerce-ui:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-ui-service
spec:
  type: ClusterIP
  selector:
    component: ecommerce-ui
  ports:
    - name: ecommerce-ui
      protocol: TCP
      port: 80
      targetPort: 4000
