k8s/mysql-profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysql-profile
  template:
    metadata:
      labels:
        component: mysql-profile
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mysql-profile-volume
      containers:
        - name: mysql-profile
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-profile-service
spec:
  type: ClusterIP
  selector:
    component: mysql-profile
  ports:
    - name: mysql-profile
      protocol: TCP
      port: 3306
      targetPort: 3306
