k8s/order-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management
spec:
  replicas: 1
  selector:
    matchLabels:
      component: order-management
  template:
    metadata:
      labels:
        component: order-management
    spec:
      containers:
        - name: order-management
          image: man7ober/order-management:latest
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: order-management-service
spec:
  type: ClusterIP
  selector:
    component: order-management
  ports:
    - name: order-management
      protocol: TCP
      port: 9090
      targetPort: 9090
