k8s/postgres-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-inventory
  template:
    metadata:
      labels:
        component: postgres-inventory
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-inventory-volume
      containers:
        - name: postgres-inventory
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-inventory-service
spec:
  type: ClusterIP
  selector:
    component: postgres-inventory
  ports:
    - name: postgres-inventory
      protocol: TCP
      port: 5432
      targetPort: 5432
