k8s/product-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      component: product-catalog
  template:
    metadata:
      labels:
        component: product-catalog
    spec:
      containers:
        - name: product-catalog
          image: man7ober/product-catalog:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: product-catalog-service
spec:
  type: ClusterIP
  selector:
    component: product-catalog
  ports:
    - name: product-catalog
      protocol: TCP
      port: 3001
      targetPort: 3001
