k8s/product-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      component: product-inventory
  template:
    metadata:
      labels:
        component: product-inventory
    spec:
      containers:
        - name: product-inventory
          image: man7ober/product-inventory:latest
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: product-inventory-service
spec:
  type: ClusterIP
  selector:
    component: product-inventory
  ports:
    - name: product-inventory
      protocol: TCP
      port: 3002
      targetPort: 3002
